exports[`LocationHeader when location and service are selected renders the selected location and service 1`] = `
<div>
  <div>
    <strong>
      Location 
    </strong>
    location1
  </div>
  <div>
    <strong>
      Service 
    </strong>
    service1
  </div>
  <div>
    <strong>
      From 
    </strong>
    Sunday, December 25th 2016
  </div>
  <div>
    <strong>
      to 
    </strong>
    Thursday, December 29th 2016
  </div>
</div>
`;

exports[`LocationHeader when location and service are selected renders without dates if no date is passed 1`] = `
<div>
  <div>
    <strong>
      Location 
    </strong>
    location1
  </div>
  <div>
    <strong>
      Service 
    </strong>
    service1
  </div>
  <div>
    <strong>
      From 
    </strong>
    -
  </div>
  <div>
    <strong>
      to 
    </strong>
    -
  </div>
</div>
`;

exports[`LocationHeader when location is selected and service is not renders selected location and service selection 1`] = `
<div>
  <div>
    <strong>
      Location 
    </strong>
    location1
  </div>
  <select
    name="select">
    <option
      value="">
      Select service
    </option>
    <option
      value="service1">
      service1
    </option>
    <option
      value="service2">
      service2
    </option>
  </select>
</div>
`;

exports[`LocationHeader when no location or service is selected renders location selection 1`] = `
<select
  name="select">
  <option
    value="">
    Select location
  </option>
  <option
    value="location1">
    location1
  </option>
  <option
    value="location2">
    location2
  </option>
</select>
`;
